[project]
name = "autoslr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crossrefapi>=1.6.0",
    "marimo>=0.12.9",
    "polars>=1.27.1",
    "pyalex>=0.18",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "transformers>=4.51.3",
]
